--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "arbitration-dlib"]
-	path = arbitration-dlib
-	url = git@github.com:cartesi/arbitration-dlib.git
+[submodule "dispatcher"]
+	path = dispatcher
+	url = ../dispatcher
