--- a/compute/Cargo.toml
+++ b/compute/Cargo.toml
@@ -8,18 +8,20 @@ authors = ["Cartesi Team"]
 [dependencies]
 log = "0.4"
 env_logger = "0.6.0"
-error = { git = "ssh://git@github.com/cartesi/dispatcher", tag = "v0.1.0-rc.1"}
-transaction = { git = "ssh://git@github.com/cartesi/dispatcher", tag = "v0.1.0-rc.1"}
-configuration = { git = "ssh://git@github.com/cartesi/dispatcher", tag = "v0.1.0-rc.1"}
-utils = { git = "ssh://git@github.com/cartesi/dispatcher", tag = "v0.1.0-rc.1"}
+error = { path = "../dispatcher/error" }
+transaction = { path = "../dispatcher/transaction" }
+configuration = { path = "../dispatcher/configuration" }
+utils = { path = "../dispatcher/utils" }
 ethereum-types = "0.4"
 ethabi = "6.1.0"
 serde_json = "1.0"
 serde = "1.0.0"
 serde_derive = "1.0.0"
-
-state = { git = "ssh://git@github.com/cartesi/dispatcher", tag = "v0.1.0-rc.1"}
-dispatcher = { git = "ssh://git@github.com/cartesi/dispatcher", tag = "v0.1.0-rc.1"}
-emulator = { git = "ssh://git@github.com/cartesi/dispatcher", tag = "v0.1.0-rc.1"}
+emulator_interface = { path = "../dispatcher/lib/grpc-interfaces/emulator_interface" }
+state = { path = "../dispatcher/state" }
+dispatcher = { path = "../dispatcher/dispatcher" }
+grpc = { git = "https://github.com/cartesi/grpc-rust", branch = "make_marshall_public" }
+protobuf = "=2.7.0"
+bytes = "0.4.12"
 
 
