--- a/cartesi_dapp_config.yaml
+++ b/cartesi_dapp_config.yaml
@@ -1,9 +1,10 @@
 dispatcher_base:
   number_of_dispatchers: 10
-  url: 'http://172.18.0.22:8545'
+  url: 'http://172.19.0.22:8545'
   testing: true
   max_delay: 500
   warn_delay: 30
+  services: []
   main_concern:
     abi: DAppMock.json
   query_port: 3001
