Fixing submodule url

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = ../dispatcher
 [submodule "lib/grpc-interfaces"]
 	path = lib/grpc-interfaces
-	url = ../lib/grpc-interfaces
+	url = ../grpc-interfaces
