--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -68,7 +68,9 @@ services:
 
   anuto_web_0:
     depends_on: [anuto_server_0]
-    image: nginx
+    image: docker.pkg.github.com/cartesi-corp/anuto/anuto-web:latest
+    environment:
+      REACT_APP_API_URL: http://127.0.0.1:8070/api
     ports:
       - "8090:80"
     networks:
@@ -113,7 +115,9 @@ services:
 
   anuto_web_1:
     depends_on: [anuto_server_1]
-    image: nginx
+    image: docker.pkg.github.com/cartesi-corp/anuto/anuto-web:latest
+    environment:
+      REACT_APP_API_URL: http://127.0.0.1:8071/api
     ports:
       - "8091:80"
     networks:
