--- a/cartesi_dapp_config.yaml
+++ b/cartesi_dapp_config.yaml
@@ -4,7 +4,12 @@ dispatcher_base:
   testing: true
   max_delay: 500
   warn_delay: 30
-  services: []
+  services:
+    -
+      name: emulator
+      transport:
+        address: tournament-mock-machine-manager
+        port: 50051
   main_concern:
     abi: DAppMock.json
   query_port: 3001
