--- a/Dockerfile.dispatcher
+++ b/Dockerfile.dispatcher
@@ -1,8 +1,11 @@
-FROM rust:1.38
+FROM rust:1.38 as build
 
 ENV BASE /opt/cartesi
 
-RUN apt-get update && apt-get install --no-install-recommends -y cmake
+RUN \
+    apt-get update && \
+    apt-get install --no-install-recommends -y cmake && \
+    rm -rf /var/lib/apt/lists/*
 
 WORKDIR $BASE
 
@@ -15,11 +18,26 @@ WORKDIR $BASE/compute
 COPY ./compute/Cargo.toml ./
 COPY ./compute/Cargo.lock ./
 RUN mkdir -p ./src && echo "fn main() { }" > ./src/main.rs
-RUN cargo build
+RUN cargo build -j $(nproc) --release
 
 # Compile tournament test
 COPY ./compute/src ./src
 
-RUN cargo install --path .
+RUN cargo install -j $(nproc) --path .
 
-CMD ["dispatcher"]
+FROM debian:buster-slim
+
+RUN \
+    apt-get update && \
+    apt-get install --no-install-recommends -y ca-certificates wget jq gawk && \
+    rm -rf /var/lib/apt/lists/*
+
+ENV DOCKERIZE_VERSION v0.6.1
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
+# copy the build artifact from the build stage
+COPY --from=build /usr/local/cargo/bin/test .
+
+CMD ["dockerize", "-wait", "file:///truffle-data/contracts/DAppMock.json", "-timeout", "120s", "find", "/truffle-data"]
