--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/grpc-interfaces"]
 	path = lib/grpc-interfaces
 	url = ../grpc-interfaces
+[submodule "logger-dlib"]
+	path = logger-dlib
+	url = ../logger-dlib
