--- a/compute/Cargo.toml
+++ b/compute/Cargo.toml
@@ -12,18 +12,18 @@ path = "src/main.rs"
 [dependencies]
 log = "0.4"
 env_logger = "0.6.0"
-error = { path = "../dispatcher/error" }
-transaction = { path = "../dispatcher/transaction" }
-configuration = { path = "../dispatcher/configuration" }
-utils = { path = "../dispatcher/utils" }
+error = { path = "../arbitration-dlib/dispatcher/error" }
+transaction = { path = "../arbitration-dlib/dispatcher/transaction" }
+configuration = { path = "../arbitration-dlib/dispatcher/configuration" }
+utils = { path = "../arbitration-dlib/dispatcher/utils" }
 ethereum-types = "0.4"
 ethabi = "6.1.0"
 serde_json = "1.0"
 serde = "1.0.0"
 serde_derive = "1.0.0"
-emulator_interface = { path = "../lib/grpc-interfaces/emulator_interface" }
-state = { path = "../dispatcher/state" }
-dispatcher = { path = "../dispatcher/dispatcher" }
+emulator_interface = { path = "../arbitration-dlib/lib/grpc-interfaces/emulator_interface" }
+state = { path = "../arbitration-dlib/dispatcher/state" }
+dispatcher = { path = "../arbitration-dlib/dispatcher/dispatcher" }
 grpc = { git = "https://github.com/cartesi/grpc-rust", branch = "make_marshall_public" }
 protobuf = "=2.7.0"
 bytes = "0.4.12"
