--- a/tournament/Cargo.toml
+++ b/tournament/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 description = "Cartesi Tournament"
 homepage = "https://cartesi.io"
-name = "compute"
+name = "tournament"
 version = "0.1.0"
 authors = ["Cartesi Team"]
 
