Update logger-dlib references on docker build

--- a/deployer/Dockerfile
+++ b/deployer/Dockerfile
@@ -3,3 +3,6 @@ FROM cartesi/truffle
 COPY ./truffle-config.js .
 COPY ./contracts ./contracts
 COPY ./migrations ./migrations
+
+# logger-dlib contract dependencies
+COPY ./logger-dlib/contracts ./contracts/logger-dlib
