--- a/setup/Dockerfile
+++ b/setup/Dockerfile
@@ -9,15 +9,15 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
 ENV BASE /opt/cartesi
-RUN mkdir -p $BASE
+RUN mkdir -p $BASE/etc/dispatcher
 WORKDIR $BASE
 
-COPY config-template.yaml .
+COPY config-template.yaml $BASE/etc/dispatcher/
 
 ENV PATH=$PATH:/home/node/.npm-global/bin
-CMD blockchain-config-generator -d $BASE/blockchain -i '*' -c DAppMock,MatchInstantiator,MatchManagerInstantiator,RevealMock,VGMock -a `cat $BASE/keys/account` -o $BASE/dispatcher/config/config.yaml -t config-template.yaml -w 120 \
-    && touch $BASE/dispatcher/config/config_done
+CMD blockchain-config-generator -d $BASE/share/blockchain -i '*' -c DAppMock,MatchInstantiator,MatchManagerInstantiator,RevealMock,VGMock -a `cat $BASE/etc/keys/account` -o $BASE/etc/dispatcher/config.yaml -t $BASE/etc/dispatcher/config-template.yaml -w 120 \
+    && touch $BASE/etc/dispatcher/config_done
 
 ENTRYPOINT [ "dockerize", \
-    "-wait", "file:///opt/cartesi/keys/account", \
+    "-wait", "file:///opt/cartesi/etc/keys/account", \
     "-timeout", "120s" ]
