--- a/tournament/Cargo.toml
+++ b/tournament/Cargo.toml
@@ -27,5 +27,4 @@ dispatcher = { path = "../arbitration-dlib/dispatcher/dispatcher" }
 compute = { path = "../arbitration-dlib/compute" }
 logger_service = { path = "../logger-dlib/logger_service" }
 protobuf = "=2.7.0"
-
-
+rust-crypto = "0.2.36" 
