--- a/tournament/Cargo.toml
+++ b/tournament/Cargo.toml
@@ -27,3 +27,4 @@ compute = { path = "../arbitration-dlib/compute" }
 logger_service = { path = "../logger-dlib/logger_service" }
 protobuf = "2"
 rust-crypto = "0.2.36"
+hex = "0.4.0"
