--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cartesi/tournament",
-  "version": "0.1.0-alpha.3",
+  "version": "0.1.0-alpha.4",
   "description": "Tournament DLib",
   "main": "main.js",
   "directories": {
@@ -10,6 +10,11 @@
   "scripts": {
     "prepare": "truffle compile",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@cartesi/util": "^0.1.1",
+    "@cartesi/arbitration": "^0.1.0-alpha.4",
+    "@cartesi/logger": "^0.1.0-alpha.3"
   },
   "devDependencies": {
     "@truffle/contract": "^4.1.1",
@@ -32,12 +37,7 @@
     "truffle-config.js"
   ],
   "bugs": {
-    "url": "https://github.com/cartesi-corp/tournament-dlib/issues"
+    "url": "https://github.com/cartesi/tournament-dlib/issues"
   },
-  "homepage": "https://github.com/cartesi-corp/tournament-dlib#readme",
-  "dependencies": {
-    "@cartesi/util": "^0.1.0",
-    "@cartesi/arbitration": "^0.1.0-alpha.3",
-    "@cartesi/logger": "^0.1.0-alpha.2"
-  }
+  "homepage": "https://github.com/cartesi/tournament-dlib#readme"
 }
