--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cartesi/tournament",
-  "version": "0.1.0-alpha.9",
+  "version": "0.1.0-alpha.10",
   "description": "Tournament DLib",
   "main": "main.js",
   "directories": {
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "@cartesi/util": "^0.1.1",
-    "@cartesi/arbitration": "^0.1.0-alpha.4",
-    "@cartesi/logger": "^0.1.0-alpha.5"
+    "@cartesi/arbitration": "^0.1.0",
+    "@cartesi/logger": "^0.1.0"
   },
   "devDependencies": {
-    "@truffle/contract": "^4.1.3",
+    "@truffle/contract": "^4.1.4",
     "@truffle/hdwallet-provider": "^1.0.28",
-    "truffle": "^5.1.6"
+    "truffle": "^5.1.8"
   },
   "repository": {
     "type": "git",
