--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cartesi/tournament",
-  "version": "0.1.0-alpha.11",
+  "version": "0.1.0",
   "description": "Tournament DLib",
   "main": "main.js",
   "directories": {
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@cartesi/util": "^0.1.1",
-    "@cartesi/arbitration": "^0.1.0",
-    "@cartesi/logger": "^0.1.0"
+    "@cartesi/arbitration": "^0.1.3",
+    "@cartesi/logger": "^0.1.1"
   },
   "devDependencies": {
     "@truffle/contract": "^4.1.4",
@@ -29,7 +29,7 @@
     "cartesi"
   ],
   "author": "Danilo Tuler <danilo@cartesi.io>",
-  "license": "Apache-2.0",
+  "license": "GPL-3.0-only",
   "files": [
     "contracts",
     "migrations",
